compiler/tests/en/errors/pure_vec_mut.salam
// EXPECT: E012
pure func filled(n i32) i32:
    v Vector<i32>
    v.push(n)
    ret v.len()
end

func main:
    println(filled(3))
end
